Changes to projects

--- a/Varshaa Portfolio/Varshaa/assets/css/styles.css
+++ b/Varshaa Portfolio/Varshaa/assets/css/styles.css
@@ -545,6 +545,7 @@ color: var(--first-color);
     font-size: var(--h3-font-size);
     font-weight: var(--font-medium);
     cursor: pointer;
+    padding: 20px;
 }
 
 .qualification__button:hover{
